--- a/Spotify data proyecto final-Copy1.ipynb
+++ b/Spotify data proyecto final-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "30179e95",
    "metadata": {},
    "outputs": [],
@@ -45,14 +45,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "148a84d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>artist</th>\n",
+       "      <th>album</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>track_id</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>The Weeknd</td>\n",
+       "      <td>After Hours</td>\n",
+       "      <td>Blinding Lights</td>\n",
+       "      <td>0VjIjW4GlUZAMYd2vXMi3b</td>\n",
+       "      <td>0.730</td>\n",
+       "      <td>0.514</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-5.934</td>\n",
+       "      <td>0.00146</td>\n",
+       "      <td>0.0598</td>\n",
+       "      <td>0.000095</td>\n",
+       "      <td>0.0897</td>\n",
+       "      <td>0.334</td>\n",
+       "      <td>171.005</td>\n",
+       "      <td>200040</td>\n",
+       "      <td>R&amp;B/Soul</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Tones And I</td>\n",
+       "      <td>Dance Monkey</td>\n",
+       "      <td>Dance Monkey</td>\n",
+       "      <td>1rgnBhdG2JDFTbYkYRZAku</td>\n",
+       "      <td>0.593</td>\n",
+       "      <td>0.825</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-6.401</td>\n",
+       "      <td>0.68800</td>\n",
+       "      <td>0.0988</td>\n",
+       "      <td>0.000161</td>\n",
+       "      <td>0.1700</td>\n",
+       "      <td>0.540</td>\n",
+       "      <td>98.078</td>\n",
+       "      <td>209755</td>\n",
+       "      <td>Alternative/Indie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Roddy Ricch</td>\n",
+       "      <td>Please Excuse Me For Being Antisocial</td>\n",
+       "      <td>The Box</td>\n",
+       "      <td>0nbXyq5TXYPCO7pr3N8S4I</td>\n",
+       "      <td>0.586</td>\n",
+       "      <td>0.896</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-6.687</td>\n",
+       "      <td>0.10400</td>\n",
+       "      <td>0.0559</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.7900</td>\n",
+       "      <td>0.642</td>\n",
+       "      <td>116.971</td>\n",
+       "      <td>196653</td>\n",
+       "      <td>Hip-Hop/Rap</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>SAINt JHN</td>\n",
+       "      <td>Roses (Imanbek Remix)</td>\n",
+       "      <td>Roses - Imanbek Remix</td>\n",
+       "      <td>2Wo6QQD1KMDWeFkkjLqwx5</td>\n",
+       "      <td>0.721</td>\n",
+       "      <td>0.785</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-5.457</td>\n",
+       "      <td>0.01490</td>\n",
+       "      <td>0.0506</td>\n",
+       "      <td>0.004320</td>\n",
+       "      <td>0.2850</td>\n",
+       "      <td>0.894</td>\n",
+       "      <td>121.962</td>\n",
+       "      <td>176219</td>\n",
+       "      <td>Dance/Electronic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Dua Lipa</td>\n",
+       "      <td>Future Nostalgia</td>\n",
+       "      <td>Don't Start Now</td>\n",
+       "      <td>3PfIrDoz19wz7qK7tYeu62</td>\n",
+       "      <td>0.793</td>\n",
+       "      <td>0.793</td>\n",
+       "      <td>11</td>\n",
+       "      <td>-4.521</td>\n",
+       "      <td>0.01230</td>\n",
+       "      <td>0.0830</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0951</td>\n",
+       "      <td>0.679</td>\n",
+       "      <td>123.950</td>\n",
+       "      <td>183290</td>\n",
+       "      <td>Nu-disco</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0       artist                                  album  \\\n",
+       "0           0   The Weeknd                            After Hours   \n",
+       "1           1  Tones And I                           Dance Monkey   \n",
+       "2           2  Roddy Ricch  Please Excuse Me For Being Antisocial   \n",
+       "3           3    SAINt JHN                  Roses (Imanbek Remix)   \n",
+       "4           4     Dua Lipa                       Future Nostalgia   \n",
+       "\n",
+       "              track_name                track_id  energy  danceability  key  \\\n",
+       "0        Blinding Lights  0VjIjW4GlUZAMYd2vXMi3b   0.730         0.514    1   \n",
+       "1           Dance Monkey  1rgnBhdG2JDFTbYkYRZAku   0.593         0.825    6   \n",
+       "2                The Box  0nbXyq5TXYPCO7pr3N8S4I   0.586         0.896   10   \n",
+       "3  Roses - Imanbek Remix  2Wo6QQD1KMDWeFkkjLqwx5   0.721         0.785    8   \n",
+       "4        Don't Start Now  3PfIrDoz19wz7qK7tYeu62   0.793         0.793   11   \n",
+       "\n",
+       "   loudness  acousticness  speechiness  instrumentalness  liveness  valence  \\\n",
+       "0    -5.934       0.00146       0.0598          0.000095    0.0897    0.334   \n",
+       "1    -6.401       0.68800       0.0988          0.000161    0.1700    0.540   \n",
+       "2    -6.687       0.10400       0.0559          0.000000    0.7900    0.642   \n",
+       "3    -5.457       0.01490       0.0506          0.004320    0.2850    0.894   \n",
+       "4    -4.521       0.01230       0.0830          0.000000    0.0951    0.679   \n",
+       "\n",
+       "     tempo  duration_ms              genre  \n",
+       "0  171.005       200040           R&B/Soul  \n",
+       "1   98.078       209755  Alternative/Indie  \n",
+       "2  116.971       196653        Hip-Hop/Rap  \n",
+       "3  121.962       176219   Dance/Electronic  \n",
+       "4  123.950       183290           Nu-disco  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "year2020 = pd.read_csv('../Spoti/2020.csv')\n",
     "\n",
     "year2020.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5e86d541",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     1.0\n",
+       "1     1.0\n",
+       "2     1.0\n",
+       "3     1.0\n",
+       "4     1.0\n",
+       "5     1.0\n",
+       "6     1.0\n",
+       "7     0.0\n",
+       "8     0.0\n",
+       "9     0.0\n",
+       "10    1.0\n",
+       "11    1.0\n",
+       "12    1.0\n",
+       "13    1.0\n",
+       "14    1.0\n",
+       "15    0.0\n",
+       "16    1.0\n",
+       "17    1.0\n",
+       "18    0.0\n",
+       "19    1.0\n",
+       "20    0.0\n",
+       "21    1.0\n",
+       "22    1.0\n",
+       "23    1.0\n",
+       "24    0.0\n",
+       "25    1.0\n",
+       "26    0.0\n",
+       "27    0.0\n",
+       "28    1.0\n",
+       "29    1.0\n",
+       "30    1.0\n",
+       "31    1.0\n",
+       "32    1.0\n",
+       "33    1.0\n",
+       "34    1.0\n",
+       "35    1.0\n",
+       "36    0.0\n",
+       "37    1.0\n",
+       "38    1.0\n",
+       "39    1.0\n",
+       "40    1.0\n",
+       "41    1.0\n",
+       "42    1.0\n",
+       "43    1.0\n",
+       "44    0.0\n",
+       "45    1.0\n",
+       "46    0.0\n",
+       "47    0.0\n",
+       "48    1.0\n",
+       "49    1.0\n",
+       "Name: energy, dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year2020['energy'].round(decimals = 0)\n"
    ]
   },
   {
@@ -1507,10 +1758,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "59b224d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m canciones \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../Spoti/songs_normalize.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m canciones\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m5\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "canciones = pd.read_csv('../Spoti/songs_normalize.csv')\n",
     "\n",
