--- a/Spotify data proyecto final unpopular random.ipynb
+++ b/Spotify data proyecto final unpopular random.ipynb
@@ -3945,7 +3945,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "997d62b2",
+   "id": "aa4217d8",
    "metadata": {},
    "outputs": [
     {
@@ -7660,16 +7660,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "id": "1e81362d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Taylor Swift             68\n",
+       "Drake                    45\n",
+       "Justin Bieber            43\n",
+       "Eminem                   42\n",
+       "Bad Bunny                38\n",
+       "                         ..\n",
+       "John Lennon, Yoko Ono     1\n",
+       "Band Aid                  1\n",
+       "The Ronettes              1\n",
+       "José Feliciano            1\n",
+       "Yeah Yeah Yeahs           1\n",
+       "Name: artist_name, Length: 2648, dtype: int64"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hit_or_not['artist_name'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8d3ef02",
+   "id": "599b059b",
    "metadata": {},
    "outputs": [],
    "source": []
