--- a/Spotify data proyecto final-Copy1.ipynb
+++ b/Spotify data proyecto final-Copy1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "798b6945",
+   "metadata": {},
+   "source": [
+    "# Sinceramente no se por que cree esta copia, creo que no hay nada nuevo simplemete no esta borrado el trabajo de la semana del proyecto de la ETL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "30179e95",
