--- a/Spanish hits with unpopular random.ipynb
+++ b/Spanish hits with unpopular random.ipynb
@@ -135,6 +135,7 @@
    "outputs": [],
    "source": [
     "def spoti_info(playlist):\n",
+    "    for e in \n",
     "    play = sp.playlist_tracks(playlist, fields=None, limit=100,\\\n",
     "                          offset=0, market=None, additional_types=('track', 'episode'))\n",
     "    links_track = []\n",
@@ -174,6 +175,16 @@
     "\n",
     "\n",
     "    return datos_spotipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f555b3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat([spoti_info(playlist[f'play_200{i}']) for i in range(10)])"
    ]
   },
   {
