--- a/unpopular work outliers.ipynb
+++ b/unpopular work outliers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "adb07a62",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "54391016",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "4           2  Hellfire Rising  James Reeder  4O2qRbfCHzMMgfbw9DBdGf  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "56cb139c",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b7ec7e1c",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "399cf1cd",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4965902a",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
        "4         0.379       0.1570     0.323    0.543  139.950    239.40  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a7c25e61",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
        "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4d14f996",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
        "(10877, 11)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "812c73fd",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8f14089d",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "(10859, 11)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,22 +483,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "378f632d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    10859.000000\n",
+       "mean       205.624433\n",
+       "std        106.830660\n",
+       "min          4.690000\n",
+       "25%        151.160000\n",
+       "50%        197.540000\n",
+       "75%        244.570000\n",
+       "max       3637.280000\n",
+       "Name: duration, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "unpopular.describe().T"
+    "unpopular.duration.describe().T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "3ca49ffa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1229599639.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [13]\u001b[0;36m\u001b[0m\n\u001b[0;31m    stats['IQR']=stats['75%']-stats['25%']\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "stats=unpopular.describe().T\n",
+    "stats=unpopular['duration]'.describe().T\n",
     "stats['IQR']=stats['75%']-stats['25%']\n",
     "outliers=pd.DataFrame(columns=stats.index)\n",
     "for c in stats.index:\n",
