--- a/Spotify data proyecto final unpopular random with singers EL BUENO DEL TODO.ipynb
+++ b/Spotify data proyecto final unpopular random with singers EL BUENO DEL TODO.ipynb
@@ -4048,7 +4048,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "cd8488c2",
+   "id": "9e43b747",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4113,8 +4113,8 @@
     "def machine_learning():\n",
     "    \n",
     "    modelos = { 'linearsvc':LinearSVC(), 'sgdc': SGDClassifier(),\n",
-    "               'mlpc': MLPClassifier(),\n",
-    "               'percept':Perceptron(),\n",
+    "                'mlpc': MLPClassifier(),\n",
+    "                'percept':Perceptron(),\n",
     "                'LogReg':LogisticRegression(),\n",
     "                'LogistReg': LogisticRegressionCV(),\n",
     "                'svc':SVC(),\n",
@@ -5611,8 +5611,434 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "id": "50ca347b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_spotipy_week_2 = pd.read_csv('../Proyecto-FInal-Spotify/CSV_full/data_week_9DEC.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "c92d600b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos_spotipy_week_2.drop_duplicates().shape==datos_spotipy_week_2.shape    # NO hay duplicados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "b7392e1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100 entries, 0 to 99\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   artist_name   100 non-null    object \n",
+      " 1   track_name    100 non-null    object \n",
+      " 2   energy        100 non-null    float64\n",
+      " 3   danceability  100 non-null    float64\n",
+      " 4   loudness      100 non-null    float64\n",
+      " 5   acousticness  100 non-null    float64\n",
+      " 6   speechiness   100 non-null    float64\n",
+      " 7   liveness      100 non-null    float64\n",
+      " 8   valence       100 non-null    float64\n",
+      " 9   tempo         100 non-null    float64\n",
+      " 10  duration      100 non-null    float64\n",
+      "dtypes: float64(9), object(2)\n",
+      "memory usage: 21.0 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "datos_spotipy_week_2.info(memory_usage='deep')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "6cc3af4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_spotipy_week_2norm = datos_spotipy_week_2.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "49e02302",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_spotipy_week_2norm['artist_name']=LabelEncoder().fit_transform(datos_spotipy_week_2norm['artist_name'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "839c00e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_spotipy_week_2norm[['energy','danceability','loudness','acousticness','speechiness','liveness',\\\n",
+    "                  'valence','tempo','duration','artist_name']] = scaler.fit_transform(datos_spotipy_week_2norm[['energy',\\\n",
+    "                    'danceability','loudness','acousticness','speechiness','liveness',\\\n",
+    "                  'valence','tempo','duration','artist_name']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "c6eb789b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_spotipy_week_2norm.drop(['track_name'],axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "d9531f78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_week2 = HGBT.predict(datos_spotipy_week_2norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "b2c9d467",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_week2= pd.Series(y_pred_week2) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "3a2b5cda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_spotipy_week_2['prediccion'] = pred_week2.round(decimals = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "d72c37e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    67\n",
+       "1    33\n",
+       "Name: prediccion, dtype: int64"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos_spotipy_week_2.prediccion.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "2705567c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artist_name</th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>prediccion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SZA</td>\n",
+       "      <td>Nobody Gets Me</td>\n",
+       "      <td>0.2840</td>\n",
+       "      <td>0.358</td>\n",
+       "      <td>-8.285</td>\n",
+       "      <td>0.8050</td>\n",
+       "      <td>0.0285</td>\n",
+       "      <td>0.183</td>\n",
+       "      <td>0.2760</td>\n",
+       "      <td>99.796</td>\n",
+       "      <td>180.85</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Caroline Polachek</td>\n",
+       "      <td>Welcome To My Island</td>\n",
+       "      <td>0.6310</td>\n",
+       "      <td>0.693</td>\n",
+       "      <td>-6.105</td>\n",
+       "      <td>0.0827</td>\n",
+       "      <td>0.0570</td>\n",
+       "      <td>0.194</td>\n",
+       "      <td>0.3620</td>\n",
+       "      <td>118.008</td>\n",
+       "      <td>233.28</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Polo G</td>\n",
+       "      <td>My All</td>\n",
+       "      <td>0.6130</td>\n",
+       "      <td>0.493</td>\n",
+       "      <td>-6.636</td>\n",
+       "      <td>0.0393</td>\n",
+       "      <td>0.4140</td>\n",
+       "      <td>0.128</td>\n",
+       "      <td>0.3730</td>\n",
+       "      <td>156.104</td>\n",
+       "      <td>197.69</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lana Del Rey</td>\n",
+       "      <td>Did you know that there's a tunnel under Ocean...</td>\n",
+       "      <td>0.3400</td>\n",
+       "      <td>0.431</td>\n",
+       "      <td>-9.384</td>\n",
+       "      <td>0.7940</td>\n",
+       "      <td>0.0311</td>\n",
+       "      <td>0.120</td>\n",
+       "      <td>0.0529</td>\n",
+       "      <td>119.877</td>\n",
+       "      <td>285.05</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SZA</td>\n",
+       "      <td>Ghost in the Machine (feat. Phoebe Bridgers)</td>\n",
+       "      <td>0.4330</td>\n",
+       "      <td>0.624</td>\n",
+       "      <td>-9.572</td>\n",
+       "      <td>0.8370</td>\n",
+       "      <td>0.0467</td>\n",
+       "      <td>0.113</td>\n",
+       "      <td>0.5890</td>\n",
+       "      <td>124.979</td>\n",
+       "      <td>218.59</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>future.exboyfriend</td>\n",
+       "      <td>Hazy</td>\n",
+       "      <td>0.7360</td>\n",
+       "      <td>0.598</td>\n",
+       "      <td>-5.831</td>\n",
+       "      <td>0.0840</td>\n",
+       "      <td>0.0295</td>\n",
+       "      <td>0.408</td>\n",
+       "      <td>0.6370</td>\n",
+       "      <td>109.987</td>\n",
+       "      <td>167.98</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Joshua Roberts</td>\n",
+       "      <td>Stay, Stay, Stay!</td>\n",
+       "      <td>0.7780</td>\n",
+       "      <td>0.613</td>\n",
+       "      <td>-4.853</td>\n",
+       "      <td>0.0116</td>\n",
+       "      <td>0.0267</td>\n",
+       "      <td>0.295</td>\n",
+       "      <td>0.5560</td>\n",
+       "      <td>112.973</td>\n",
+       "      <td>173.63</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>Myron Elkins</td>\n",
+       "      <td>Wrong Side Of The River</td>\n",
+       "      <td>0.8320</td>\n",
+       "      <td>0.604</td>\n",
+       "      <td>-5.484</td>\n",
+       "      <td>0.3340</td>\n",
+       "      <td>0.0280</td>\n",
+       "      <td>0.293</td>\n",
+       "      <td>0.8670</td>\n",
+       "      <td>104.147</td>\n",
+       "      <td>156.01</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Hana Eid</td>\n",
+       "      <td>Let Down</td>\n",
+       "      <td>0.6090</td>\n",
+       "      <td>0.633</td>\n",
+       "      <td>-12.534</td>\n",
+       "      <td>0.0816</td>\n",
+       "      <td>0.0366</td>\n",
+       "      <td>0.108</td>\n",
+       "      <td>0.4350</td>\n",
+       "      <td>127.015</td>\n",
+       "      <td>207.15</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Sabrina Song</td>\n",
+       "      <td>Down</td>\n",
+       "      <td>0.0702</td>\n",
+       "      <td>0.400</td>\n",
+       "      <td>-12.760</td>\n",
+       "      <td>0.9440</td>\n",
+       "      <td>0.0441</td>\n",
+       "      <td>0.145</td>\n",
+       "      <td>0.1830</td>\n",
+       "      <td>165.425</td>\n",
+       "      <td>180.98</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           artist_name                                         track_name  \\\n",
+       "0                  SZA                                     Nobody Gets Me   \n",
+       "1    Caroline Polachek                               Welcome To My Island   \n",
+       "2               Polo G                                             My All   \n",
+       "3         Lana Del Rey  Did you know that there's a tunnel under Ocean...   \n",
+       "4                  SZA       Ghost in the Machine (feat. Phoebe Bridgers)   \n",
+       "..                 ...                                                ...   \n",
+       "95  future.exboyfriend                                               Hazy   \n",
+       "96      Joshua Roberts                                  Stay, Stay, Stay!   \n",
+       "97        Myron Elkins                            Wrong Side Of The River   \n",
+       "98            Hana Eid                                           Let Down   \n",
+       "99        Sabrina Song                                               Down   \n",
+       "\n",
+       "    energy  danceability  loudness  acousticness  speechiness  liveness  \\\n",
+       "0   0.2840         0.358    -8.285        0.8050       0.0285     0.183   \n",
+       "1   0.6310         0.693    -6.105        0.0827       0.0570     0.194   \n",
+       "2   0.6130         0.493    -6.636        0.0393       0.4140     0.128   \n",
+       "3   0.3400         0.431    -9.384        0.7940       0.0311     0.120   \n",
+       "4   0.4330         0.624    -9.572        0.8370       0.0467     0.113   \n",
+       "..     ...           ...       ...           ...          ...       ...   \n",
+       "95  0.7360         0.598    -5.831        0.0840       0.0295     0.408   \n",
+       "96  0.7780         0.613    -4.853        0.0116       0.0267     0.295   \n",
+       "97  0.8320         0.604    -5.484        0.3340       0.0280     0.293   \n",
+       "98  0.6090         0.633   -12.534        0.0816       0.0366     0.108   \n",
+       "99  0.0702         0.400   -12.760        0.9440       0.0441     0.145   \n",
+       "\n",
+       "    valence    tempo  duration  prediccion  \n",
+       "0    0.2760   99.796    180.85           0  \n",
+       "1    0.3620  118.008    233.28           1  \n",
+       "2    0.3730  156.104    197.69           1  \n",
+       "3    0.0529  119.877    285.05           0  \n",
+       "4    0.5890  124.979    218.59           0  \n",
+       "..      ...      ...       ...         ...  \n",
+       "95   0.6370  109.987    167.98           1  \n",
+       "96   0.5560  112.973    173.63           1  \n",
+       "97   0.8670  104.147    156.01           0  \n",
+       "98   0.4350  127.015    207.15           0  \n",
+       "99   0.1830  165.425    180.98           0  \n",
+       "\n",
+       "[100 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos_spotipy_week_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98fc1a71",
    "metadata": {},
    "outputs": [],
    "source": []
