--- a/Data/Prediccion Spain.ipynb
+++ b/Data/Prediccion Spain.ipynb
@@ -70,77 +70,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e0aa358",
-   "metadata": {},
-   "source": [
-    "# PROYECTO FINAL EMPIEZA AQUI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "126bfa8d",
-   "metadata": {},
-   "source": [
-    "# Voy a probar cosas nuevas que no tienen que ver con la ETL que ya hice a ver que puedo ir metiendo\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8d9b4eae",
-   "metadata": {},
-   "source": [
-    "# SQL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "98edc2ea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#with open('../Proyecto-FInal-Spotify/token.txt', 'r') as file:\n",
-    "    #contraseña=file.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c766c050",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from sqlalchemy import create_engine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "90cf7aba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#str_conn=f'mysql+pymysql://root:{contraseña}@localhost:3306/proyecto_final'\n",
-    "\n",
-    "#cursor=create_engine(str_conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "fbf8cf5f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#hit_or_not.to_sql(name='hit_or_not', con=cursor, if_exists='replace',index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "737d1f6c",
    "metadata": {},
    "source": [
-    "# PARA ESPAÑA"
+    "#  PREDICCION PARA ESPAÑA"
    ]
   },
   {
@@ -2371,6 +2304,10 @@
   }
  ],
  "metadata": {
+  "finalized": {
+   "timestamp": 1671122337537,
+   "trusted": false
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
