--- a/Data/Prediccion Spain.ipynb
+++ b/Data/Prediccion Spain.ipynb
@@ -10,8 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/javi/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.5\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+      "2022-12-15 18:15:02,989 [10226] WARNING  py.warnings:109: [JupyterRequire] /Users/javi/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.5\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
+      "\n"
      ]
     }
    ],
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "c3a967d6",
    "metadata": {
     "scrolled": true
@@ -209,20 +210,20 @@
        "4    -5.707       0.17500       0.0268    0.1060    0.311   88.535    247.69  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spanish_hits = pd.read_csv('../Proyecto-FInal-Spotify/CSV_primeros/spanish_hits.csv')\n",
+    "spanish_hits = pd.read_csv('../Data/CSV_primeros/spanish_hits.csv')\n",
     "\n",
     "spanish_hits.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "9d9a6697",
    "metadata": {},
    "outputs": [],
@@ -253,18 +254,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "d111894c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "unpopular_spain = pd.read_csv('../Spoti/unpopular_songs.csv')\n",
+    "unpopular_spain = pd.read_csv('../Data/Spoti/unpopular_songs.csv')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "6072ef97",
    "metadata": {},
    "outputs": [],
@@ -1497,14 +1498,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "142d013a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 48,
    "id": "459528b5",
    "metadata": {},
@@ -1858,17 +1851,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "72d7a7e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "datos_spotipy_week_1_sp = pd.read_csv('../Proyecto-FInal-Spotify/CSV_full/data_week_9DEC_SPAIN.csv')"
+    "datos_spotipy_week_1_sp = pd.read_csv('../Data/CSV_full/data_week_9DEC_SPAIN.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "b1261680",
    "metadata": {},
    "outputs": [
@@ -2004,7 +1997,7 @@
        "4    0.874  136.166    172.94  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2290,7 +2283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(GBC, open('../Proyecto-FInal-Spotify/CSV_primeros/GBC.pkl',\n",
+    "pickle.dump(GBC, open('../Data/CSV_primeros/GBC.pkl',\n",
     "                      'wb'))"
    ]
   },
